[gd_scene load_steps=12 format=2]

[ext_resource path="res://Sounds/MenuSelect.wav" type="AudioStream" id=1]
[ext_resource path="res://Sounds/MenuHover.wav" type="AudioStream" id=2]
[ext_resource path="res://Templates/MenuButton.gd" type="Script" id=3]
[ext_resource path="res://Fonts/CommanderGreenFont60.tres" type="DynamicFont" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="Animation" id=6]
resource_name = "ButtonBob"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Label:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 5 ), Vector2( 0, -5 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "TitleBob"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 10 ), Vector2( 0, -10 ), Vector2( 0, 10 ) ]
}

[node name="MenuButton" type="Button"]
margin_top = 84.0
margin_right = 600.0
margin_bottom = 184.0
rect_min_size = Vector2( 600, 100 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
flat = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonBob" type="AnimationPlayer" parent="."]
anims/ButtonBob = SubResource( 6 )
anims/TitleBob = SubResource( 7 )

[node name="MenuHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="MenuSelect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_top = 5.0
margin_right = 580.0
margin_bottom = 115.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.235294, 0.521569, 0.188235, 1 )
custom_colors/font_color_shadow = Color( 0.2, 0.419608, 0.160784, 1 )
custom_constants/shadow_offset_y = -8
text = "Button"
__meta__ = {
"_edit_use_anchors_": false
}
